# TevianClient

./: .gitignore  CMakeLists.txt  README.md
Manager/: CMakeLists.txt  manager.cpp  manager.h  myrect.h
TevianClient/: CMakeLists.txt  customview.cpp  customview.h  main.cpp  resources.qrc  tevianclient.cpp  tevianclient.h  tevianclient.ui
TevianClientCLI/: CMakeLists.txt  clientcli.cpp  clientcli.h  main.cpp
